--- a/frontend/src/components/styleList.css
+++ b/frontend/src/components/styleList.css
@@ -1,16 +1,119 @@
 .list{
-
     background-color: #383F51;
+    flex-shrink: 0;
     color: white;
     height: 1080px;
-    width: 268px;
+    width: 268px; 
     -webkit-box-shadow: 0px 15px 15px 0px rgba(34, 60, 80, 0.2);
     -moz-box-shadow: 0px 15px 15px 0px rgba(34, 60, 80, 0.2);
     box-shadow: 0px 15px 15px 0px rgba(34, 60, 80, 0.2);    
 }
 
-    
+.logo{
+    transform: translateY(20px);
+    padding-left: 30px;
+    text-shadow: 8px 8px 10px rgba(0, 0, 0, 0.5)
+}
+
+ul{
+    transform: translateY(40px);
+}    
 
 li{
     list-style-type: none;
+    margin: 30PX;
+}
+
+.horizontal-line{
+    transform: translateY(46px);
+    border-bottom: 2px solid #323742;
+}
+
+.header{
+    /* position: relative; */
+    display: flex;
+    background-color: whitesmoke;
+    flex-grow: 1;
+    width: 100%;
+    height: 75px;
+    left: 0;
+    justify-content: center;
+    align-items: center;
+}
+
+.baner{
+    position: absolute;
+    max-width: 150px;
+    left: 275px;
+}
+.search{
+    padding-left: 25px;
+    width: 300px;
+    height: 30px;
+    border-radius: 15px;
+}
+
+.main-body{
+    position: absolute;
+    justify-content: space-between;
+    align-items: center;
+    transform: translateY(90px);
+    left: 470px;
+    top: -80px;
+    font-size: 20px;
+    font-weight: bold;
+    width: 100%;
+    max-width: 1000px;
+    
+}
+
+.main-list{
+    align-items: center;
+    display: flex;
+    list-style: none;
+    padding: 0;
+    width: auto;
+
+}
+
+.adress{
+    border-radius: 100px;
+    padding: 10px;
+    
+} 
+
+.date{
+    
+    
+}
+
+.status{
+    padding: 0;
+    margin: 15px;
+}
+
+.main-menu{
+    width: 100%;
+    max-width: 716px;
+    height: 200px;
+    position: absolute;
+    display: flex;
+    justify-content: space-between;
+}
+
+.main-menu p{
+    padding-top: 10px;
+    padding-left: 40px;
+    text-align: left;
+    font-size: 15px;
+    font-weight: normal;
+}
+.main-menu .circle{
+    width: 50px;
+    height: 22px;
+    align-items: center;
+    border-radius: 100%;
+    margin-left: 40px;
+    margin-right: -47px;
+    background-color: green;
 }
