--- a/frontend/src/components/styleList.css
+++ b/frontend/src/components/styleList.css
@@ -42,15 +42,9 @@ li{
 }
 
 .baner{
-    position: absolute;
+    
     max-width: 150px;
-    left: 275px;
-}
-.search{
-    padding-left: 25px;
-    width: 300px;
-    height: 30px;
-    border-radius: 15px;
+    
 }
 
 .main-body{
@@ -90,30 +84,22 @@ li{
 .status{
     padding: 0;
     margin: 15px;
+    
 }
 
-.main-menu{
+.table-adress{
     width: 100%;
-    max-width: 716px;
-    height: 200px;
-    position: absolute;
-    display: flex;
-    justify-content: space-between;
+    width: 350px;
 }
 
-.main-menu p{
-    padding-top: 10px;
-    padding-left: 40px;
-    text-align: left;
-    font-size: 15px;
-    font-weight: normal;
+.table-data{
+    width: 100%;
+    width: 250px;
 }
-.main-menu .circle{
-    width: 50px;
-    height: 22px;
-    align-items: center;
-    border-radius: 100%;
-    margin-left: 40px;
-    margin-right: -47px;
-    background-color: green;
+
+.table-status{
+    width: 100%;
+    width: 150px;
 }
+
+
